# Secure-Report

./: .gitignore  CMakeLists.txt  README.md
.errors/: error_default_args  error_size=10_s=2
cpp_sketch/: CMakeLists.txt  README.md  saffron_example.cpp  sketch_encoder.cpp  sketch_encoder.h  sketch_matrix.cpp  sketch_matrix.h  test_saffron.cpp
doc/: README.md
processed/: matrix.txt
python_sketch/: README.md  disjunct.py  requirements.txt  saffron.py  write_matrix_to_file.py
src/: CMakeLists.txt  Client.h  Config.h  Database.cpp  Database.h  DatabaseConstants.h  Doxyfile  EncryptedBits.h  FHEDatabase.h  FHEDatabaseConfig.cpp  FHEDatabaseConfig.h  FHEUtils.h  GenericZP.h  HashFunctionsFamily.cpp  HashFunctionsFamily.h  InputOutput.cpp  InputOutput.h  PlainDatabase.cpp  PlainDatabase.h  PlainFileSystemDatabase.h  Protocol.h  Queries.h  Run.cpp  Server.cpp  Server.h  SimplifiedHelibKeys.cpp  SimplifiedHelibKeys.h  SimplifiedHelibNumber.cpp  SimplifiedHelibNumber.h  SketchEncoder.cpp  SketchEncoder.h  TrustedThirdParty.cpp  TrustedThirdParty.h  VectorUtils.cpp  VectorUtils.h  call_python.cpp  main.cpp  matrix.h  python_api.cpp  python_api.h  (+5 more)
src/HashFunctions/: HashFunctionData.cpp  HashFunctionData.h  HashFunctionLogData.cpp  HashFunctionLogData.h  HashFunctionsFamily.cpp  HashFunctionsFamily.h  SBRTestData.cpp  SBRTestData.h  TestHashFunctionFamily.cpp  TestHashFunctionFamily.h
src/algorithms/encoders/: SketchEncoder.h
src/algorithms/fully_homomorphic/: Bits.h  Comparators.h  Context.cpp  Context.h  FHEDatabaseConfig.cpp  FHEUtils.h  GenericZP.cpp  GenericZP.h  SimplifiedHelibNumber.h
src/algorithms/hash_functions/: HashFunctionsFamily.cpp  HashFunctionsFamily.h
src/entities/: Client.h  Protocol.h  Queries.h  Server.h  TrustedThirdParty.cpp  TrustedThirdParty.h
src/infrastructure/: JsonParser.cpp  JsonParser.h  VectorUtils.cpp
src/infrastructure/file_system/: FHEDatabase.h  InputOutput.cpp  InputOutput.h  JsonLogger.cpp  JsonLogger.h  PlainFileSystemDatabase.h
src/infrastructure/test/data/: Data.h  HashFunctionData.h  SecureRetrievalData.h  TestResult.h
src/infrastructure/test/test_case/: HashTestCase.cpp  HashTestCase.h  SecureRetrievalTestCase.h
src/infrastructure/test/tester/: HashFunctionFamilyTester.cpp  HashFunctionFamilyTester.h  TestHashFunctionFamily.h  Tester.cpp  Tester.h
src/utils/: JsonParser.h
src/utils/test/: JsonLogger.cpp  JsonLogger.h  TestHashFunctionFamily.cpp
src/utils/test/data/: Data.cpp  Data.h  HashFunctionData.cpp  HashFunctionData.h  SecureRetrievalData.h  TestResult.h
src/utils/test/test_case/: HashTestCase.cpp  HashTestCase.h  SecureRetrievalTestCase.h  TestCase.cpp  TestCase.h
src/utils/test/tester/: ProtocolTester.cpp  ProtocolTester.h  TestHashFunctionFamily.cpp  TestHashFunctionFamily.h  Tester.cpp  Tester.h
src/utils/time/: Duration.cpp  Duration.h
src/vandermonde_matrix/: vandermonde.cpp  vandermonde.hpp  vandermonde_test.cpp
tests/: CMakeLists.txt  HelibTest.cpp  HelibTest.h  dummy_test.cpp  test_read_write_encrypted_number.cpp
tests/googletest-master/googletest/docs/: advanced.md  faq.md  primer.md
